--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An AI app development company building on the cutting-edge for mobile and desktop.">
-    <meta name="keywords" content="Relative, AI, Hermes, Relative Industries, App Development">
-    <title>Relative.dev</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Ink&display=swap" rel="stylesheet">
+    <meta name="description" content="This is the personal website of Adam Senese.">
+    <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
+    <title>Adam Senese</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🍀%3C/text%3E%3C/svg%3E" type="image/svg+xml">
     <style>
         body {
             margin: 0;
@@ -24,7 +24,6 @@
             max-width: 600px;
         }
         h1 {
-            font-family: 'Bitcount Ink', monospace;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -75,10 +74,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Relative.dev</h1>
-        <h2>About us</h2>
-        <p class="bio">We are an AI app development company building on the cutting-edge for mobile and desktop.</p>
+        <h1>Adam Senese</h1>
+        <h2>About</h2>
+        <p class="bio">Currently, I am the co-founder of <a href="https://relative.dev">Relative.dev</a>.</p>
         <h2>Links</h2>
+        <ul class="links">
+            <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
+            <!-- <li><a href="https://cutgun.ai">Artemis Value</a></li> -->
+            <!-- Add more links as needed -->
+        </ul>
+        <h2>Projects</h2>
         <ul class="links">
             <li><a href="https://hermesvoice.com">Hermes | AI Voice Dictation for Mac</a></li>
             <li><a href="https://cutgun.ai">Cutgun | AI Video Creation</a></li>
@@ -87,10 +92,12 @@
         </ul>
         <hr>
         <footer>
-            <p>Relative Industries LLC</p>
+            <p>Adam Senese</p>
             <ul class="social">
-                <li><a href="https://x.com/relativedotdev">X</a></li>
-                <li><a href="https://www.linkedin.com/company/relativeindustries">LinkedIn</a></li>
+                <li><a href="https://x.com/adamsenese">X</a></li>
+                <li><a href="https://www.linkedin.com/adamsenese">LinkedIn</a></li>
+                <li><a href="https://www.youtube.com/@AdamSenese">YouTube</a></li>
+                <!-- <li><a href="https://www.youtube.com/@AdamSenese">Substack</a></li> -->
             </ul>
         </footer>
     </div>
