--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2>Links</h2>
         <ul class="links">
             <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
-            <li><a href="https://substack.com/@valueinvestingclub">My investing newsletter</a></li>
+            <li><a href="https://valueinvestingclub.substack.com/">My investing newsletter</a></li>
             <!-- Add more links as needed -->
         </ul>
         <h2>Projects</h2>
@@ -96,7 +96,7 @@
                 <li><a href="https://x.com/adamsenese">X</a></li>
                 <li><a href="https://www.linkedin.com/adamsenese">LinkedIn</a></li>
                 <li><a href="https://www.youtube.com/@AdamSenese">YouTube</a></li>
-                <li><a href="https://substack.com/@valueinvestingclub">Substack</a></li>
+                <li><a href="https://valueinvestingclub.substack.com/">Substack</a></li>
             </ul>
         </footer>
     </div>
