--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li><a href="https://x.com/adamsenese">X</a></li>
                 <li><a href="https://www.linkedin.com/adamsenese">LinkedIn</a></li>
                 <li><a href="https://www.youtube.com/@AdamSenese">YouTube</a></li>
-                <li><a href="https://valueinvestingclub.substack.com/">Substack</a></li>
+                <!-- <li><a href="https://valueinvestingclub.substack.com/">Substack</a></li> -->
             </ul>
         </footer>
     </div>
