--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container">
         <h1>Adam Senese</h1>
         <h2>About</h2>
-        <p class="bio">Currently, I am the co-founder of <a href="https://relative.dev">Relative.dev</a>.</p>
+        <p class="bio">I am the co-founder of <a href="https://relative.dev">Relative.dev</a>.</p>
         <h2>Links</h2>
         <ul class="links">
             <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
