--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="description" content="This is the personal website of Adam Senese.">
     <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
     <title>Adam Senese</title>
-<link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🏹%3C/text%3E%3C/svg%3E" type="image/svg+xml">    <style>
+<!-- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🏹%3C/text%3E%3C/svg%3E" type="image/svg+xml">    <style> -->
         body {
             margin: 0;
             padding: 40px 20px;
             background-color: #fff;
-            color: #333;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -79,7 +78,6 @@
         <h2>Links</h2>
         <ul class="links">
             <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
-            <li><a href="https://valueinvestingclub.substack.com/">My investing newsletter</a></li>
             <!-- Add more links as needed -->
         </ul>
         <h2>Projects</h2>
