--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is the personal website of Adam Senese.">
     <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
     <title>Adam Senese</title>
-<!-- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🏹%3C/text%3E%3C/svg%3E" type="image/svg+xml">    <style> -->
+<style>
         body {
             margin: 0;
             padding: 40px 20px;
