--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>Links</h2>
         <ul class="links">
             <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
-            <li><a href="https://www.youtube.com/@AdamSenese">My YouTube Vlog</a></li>
+            <li><a href="https://www.youtube.com/@AdamSenese">My YouTube vlog</a></li>
             <!-- Add more links as needed -->
         </ul>
         <h2>Projects</h2>
