--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="description" content="This is the personal website of Adam Senese.">
     <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
     <title>Adam Senese</title>
+<script
+  defer
+  data-website-id="dfid_oiqgFcVBhEReTvrQfYLwf"
+  data-domain="adamsenese.com"
+  src="https://datafa.st/js/script.js">
+</script>
 <style>
         body {
             margin: 0;
