Add DM Sans font and update project descriptions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="This is the personal website of Adam Senese.">
     <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
     <title>Adam Senese</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 <script
   defer
   data-website-id="dfid_oiqgFcVBhEReTvrQfYLwf"
@@ -23,6 +26,7 @@
             min-height: 100vh;
             text-align: left;
             line-height: 1.6;
+            font-family: 'DM Sans', sans-serif;
         }
         .container {
             max-width: 600px;
@@ -89,8 +93,8 @@
         </ul>
         <h2>Projects</h2>
         <ul class="links">
-            <li><a href="https://hermesvoice.com">Hermes | AI Voice Dictation for Mac</a></li>
-            <li><a href="https://cutgun.ai">Cutgun | AI Video Creation</a></li>
+            <li><a href="https://hermesvoice.com">Hermes | Magical Voice Dictation for Mac</a></li>
+            <li><a href="https://cutgun.ai">Cutgun | AI Video Studio</a></li>
             <li><a href="https://example.com/link4">MiniTab | Save up to 95% on memory usage and ditch tab clutter in Google Chrome (Coming Soon)</a></li>
             <!-- Add more links as needed -->
         </ul>
