Add 'My stack to ship faster' section with Framer, Datafast, and Hermes

--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
             <li><a href="https://example.com/link4">MiniTab | Save up to 95% on memory usage and ditch tab clutter in Google Chrome (Coming Soon)</a></li>
             <!-- Add more links as needed -->
         </ul>
+        <h2>My stack to ship faster</h2>
+        <ul class="links">
+            <li><a href="https://framer.com">Framer | Build a beautiful website</a></li>
+            <li><a href="https://datafa.st/?via=adam-senese">Datafast | Web analytics that drive revenue</a></li>
+            <li><a href="https://hermesvoice.com">Hermes | Work 4x faster with voice-to-text</a></li>
+            <!-- Add more links as needed -->
+        </ul>
         <hr>
         <footer>
             <p>Adam Senese</p>
