--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p class="bio">I am the co-founder of <a href="https://relative.dev">Relative.dev</a>.</p>
         <h2>Links</h2>
         <ul class="links">
-            <li><a href="https://adams.bearblog.dev/">My personal blog</a></li>
+            <!-- <li><a href="https://adams.bearblog.dev/">My personal blog</a></li> -->
             <li><a href="https://www.youtube.com/@AdamSenese">My YouTube vlog</a></li>
             <!-- Add more links as needed -->
         </ul>
