--- a/index.html
+++ b/index.html
@@ -94,13 +94,11 @@
         <h2>Projects</h2>
         <ul class="links">
             <li><a href="https://hermesvoice.com">Hermes | Magical Voice Dictation for Mac</a></li>
-            <li><a href="https://cutgun.ai">Cutgun | AI Video Studio</a></li>
-            <li><a href="https://example.com/link4">MiniTab | Save up to 95% on memory usage and ditch tab clutter in Google Chrome (Coming Soon)</a></li>
             <!-- Add more links as needed -->
         </ul>
         <h2>My stack to ship faster</h2>
         <ul class="links">
-            <li><a href="https://framer.com">Framer | Build a beautiful website</a></li>
+            <li><a href="https://framer.link/adam-senese-uakfl">Framer | Build a beautiful website</a></li>
             <li><a href="https://datafa.st/?via=adam-senese">Datafast | Web analytics that drive revenue</a></li>
             <li><a href="https://hermesvoice.com">Hermes | Work 4x faster with voice-to-text</a></li>
             <!-- Add more links as needed -->
