--- a/index.html
+++ b/index.html
@@ -63,21 +63,34 @@
             margin-top: 40px;
             padding: 32px;
             border-radius: 26px;
-            background: rgba(255, 255, 255, 0.12);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.22) 0%, rgba(255, 255, 255, 0.06) 100%);
             display: flex;
             align-items: center;
             gap: 28px;
-            border: 1px solid rgba(255, 255, 255, 0.35);
-            box-shadow: 0 20px 45px rgba(55, 84, 170, 0.18);
-            backdrop-filter: blur(26px);
+            border: 1px solid rgba(255, 255, 255, 0.42);
+            box-shadow: 0 25px 60px rgba(15, 23, 42, 0.22);
+            backdrop-filter: blur(32px);
+            -webkit-backdrop-filter: blur(32px);
             overflow: hidden;
         }
         .contact-card::before {
             content: "";
             position: absolute;
             inset: 0;
-            background: radial-gradient(circle at top left, rgba(136, 190, 255, 0.55), transparent 55%), radial-gradient(circle at bottom right, rgba(111, 82, 240, 0.35), transparent 60%);
+            background: radial-gradient(circle at top 15% left 20%, rgba(136, 190, 255, 0.55), transparent 60%), radial-gradient(circle at bottom right, rgba(111, 82, 240, 0.35), transparent 70%), linear-gradient(120deg, rgba(255, 255, 255, 0.3), transparent 65%);
             z-index: 0;
+        }
+        .contact-card::after {
+            content: "";
+            position: absolute;
+            top: -40px;
+            left: 20%;
+            width: 60%;
+            height: 120px;
+            background: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
+            transform: rotate(8deg);
+            z-index: 0;
+            opacity: 0.6;
         }
         .contact-card > * {
             position: relative;
@@ -117,9 +130,10 @@
             transform: translateY(-2px);
             box-shadow: 0 14px 28px rgba(34, 158, 217, 0.35);
         }
-        .telegram-button svg {
-            width: 18px;
-            height: 18px;
+        .telegram-button img {
+            width: 20px;
+            height: 20px;
+            display: block;
         }
         hr {
             border: 0;
@@ -172,9 +186,7 @@
                 <h3>Connect on Telegram</h3>
                 <p>Have a project in mind or want to chat? Drop me a message on Telegram.</p>
                 <a class="telegram-button" href="https://t.me/AdamSenese" target="_blank" rel="noopener noreferrer">
-                    <svg viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <path fill="#FFFFFF" d="M120 0C53.726 0 0 53.726 0 120s53.726 120 120 120 120-53.726 120-120S186.274 0 120 0Zm55.602 77.343c-1.787 57.462-30.601 98.304-84.176 104.008-15.436-1.343-21.875-9.364-24.258-19.114L63.28 141.8l90.58-57.022c4.143-2.586-.908-4.051-6.437-1.463l-111.544 51.629-3.577-11.31c19.043-12.262 76.225-47.817 116.894-68.72 27.61-14.197 53.208-6.952 46.606 22.429Z"/>
-                    </svg>
+                    <img src="Logo.svg" alt="Adam Senese logo">
                     Message me on Telegram
                 </a>
             </div>
