--- a/index.html
+++ b/index.html
@@ -61,36 +61,37 @@
         .contact-card {
             position: relative;
             margin-top: 40px;
-            padding: 32px;
-            border-radius: 26px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.22) 0%, rgba(255, 255, 255, 0.06) 100%);
+            padding: 30px;
+            border-radius: 28px;
             display: flex;
             align-items: center;
-            gap: 28px;
-            border: 1px solid rgba(255, 255, 255, 0.42);
-            box-shadow: 0 25px 60px rgba(15, 23, 42, 0.22);
-            backdrop-filter: blur(32px);
-            -webkit-backdrop-filter: blur(32px);
+            gap: 24px;
+            background: rgba(255, 255, 255, 0.18);
+            border: 1px solid rgba(255, 255, 255, 0.55);
+            box-shadow: 0 30px 60px -35px rgba(15, 23, 42, 0.45);
+            backdrop-filter: blur(36px) saturate(160%);
+            -webkit-backdrop-filter: blur(36px) saturate(160%);
             overflow: hidden;
         }
         .contact-card::before {
             content: "";
             position: absolute;
             inset: 0;
-            background: radial-gradient(circle at top 15% left 20%, rgba(136, 190, 255, 0.55), transparent 60%), radial-gradient(circle at bottom right, rgba(111, 82, 240, 0.35), transparent 70%), linear-gradient(120deg, rgba(255, 255, 255, 0.3), transparent 65%);
+            background: linear-gradient(145deg, rgba(255, 255, 255, 0.45), rgba(255, 255, 255, 0.05));
+            opacity: 0.6;
             z-index: 0;
         }
         .contact-card::after {
             content: "";
             position: absolute;
-            top: -40px;
-            left: 20%;
-            width: 60%;
-            height: 120px;
-            background: linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
-            transform: rotate(8deg);
+            top: -55px;
+            left: 18%;
+            width: 64%;
+            height: 140px;
+            background: linear-gradient(105deg, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0));
+            transform: rotate(9deg);
             z-index: 0;
-            opacity: 0.6;
+            opacity: 0.45;
         }
         .contact-card > * {
             position: relative;
@@ -101,8 +102,8 @@
             height: 120px;
             border-radius: 16px;
             object-fit: cover;
-            border: 4px solid rgba(255, 255, 255, 0.8);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            border: 3px solid rgba(255, 255, 255, 0.75);
+            box-shadow: 0 16px 30px -20px rgba(15, 23, 42, 0.6);
         }
         .contact-card-content h3 {
             margin: 0 0 8px 0;
