--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             display: flex;
             align-items: center;
             gap: 24px;
-            background: rgba(255, 255, 255, 0.18);
-            border: 1px solid rgba(255, 255, 255, 0.55);
+            background: #ECE7E3;
+            border: 1px solid rgba(255, 255, 255, 0.65);
             box-shadow: 0 30px 60px -35px rgba(15, 23, 42, 0.45);
             backdrop-filter: blur(36px) saturate(160%);
             -webkit-backdrop-filter: blur(36px) saturate(160%);
@@ -77,19 +77,20 @@
             content: "";
             position: absolute;
             inset: 0;
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.45), rgba(255, 255, 255, 0.05));
-            opacity: 0.6;
+            background-image:
+                radial-gradient(circle at 18% 22%, rgba(255, 255, 255, 0.45), rgba(255, 255, 255, 0) 60%),
+                radial-gradient(circle at 82% 68%, rgba(255, 255, 255, 0.35), rgba(255, 255, 255, 0) 70%);
+            opacity: 0.5;
             z-index: 0;
         }
         .contact-card::after {
             content: "";
             position: absolute;
-            top: -55px;
-            left: 18%;
-            width: 64%;
-            height: 140px;
-            background: linear-gradient(105deg, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0));
-            transform: rotate(9deg);
+            inset: 0;
+            background-image:
+                linear-gradient(120deg, rgba(255, 255, 255, 0.24) 0%, rgba(255, 255, 255, 0) 55%),
+                repeating-linear-gradient(135deg, rgba(255, 255, 255, 0.06) 0px, rgba(255, 255, 255, 0.06) 10px, rgba(34, 158, 217, 0.05) 10px, rgba(34, 158, 217, 0.05) 20px);
+            mix-blend-mode: soft-light;
             z-index: 0;
             opacity: 0.45;
         }
