--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             border: 3px solid rgba(255, 255, 255, 0.75);
             box-shadow: 0 16px 30px -20px rgba(15, 23, 42, 0.6);
         }
+        .contact-card-content {
+            flex: 1;
+        }
         .contact-card-content h3 {
             margin: 0 0 8px 0;
             font-size: 1.3em;
@@ -136,6 +139,27 @@
             width: 20px;
             height: 20px;
             display: block;
+        }
+        @media (max-width: 640px) {
+            body {
+                padding: 30px 16px;
+            }
+            .contact-card {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                padding: 28px;
+            }
+            .contact-card img {
+                width: 100px;
+                height: 100px;
+            }
+            .contact-card-content {
+                width: 100%;
+            }
+            .telegram-button {
+                width: 100%;
+            }
         }
         hr {
             border: 0;
@@ -189,7 +213,7 @@
                 <p>Have a project in mind or want to chat? Drop me a message on Telegram.</p>
                 <a class="telegram-button" href="https://t.me/AdamSenese" target="_blank" rel="noopener noreferrer">
                     <img src="Logo.svg" alt="Adam Senese logo">
-                    Message me on Telegram
+                    Message me
                 </a>
             </div>
         </div>
