--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
         }
         .contact-card-content {
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
         .contact-card-content h3 {
             margin: 0 0 8px 0;
@@ -146,19 +149,24 @@
             }
             .contact-card {
                 flex-direction: column;
-                align-items: center;
-                text-align: center;
-                padding: 28px;
+                align-items: flex-start;
+                text-align: left;
+                padding: 26px;
+                gap: 20px;
             }
             .contact-card img {
                 width: 100px;
                 height: 100px;
+                margin-bottom: 4px;
             }
             .contact-card-content {
                 width: 100%;
+                gap: 14px;
             }
             .telegram-button {
-                width: 100%;
+                width: auto;
+                padding: 10px 18px;
+                align-self: flex-start;
             }
         }
         hr {
