Set adamfavi.png as favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="This is the personal website of Adam Senese.">
     <meta name="keywords" content="Adam Senese, AI, Hermes, Relative Industries, Relative.dev, Senese">
     <title>Adam Senese</title>
+    <link rel="icon" type="image/png" href="adamfavi.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
