Balance CTA sizing across breakpoints

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            padding: 12px 20px;
+            padding: 10px 18px;
             border-radius: 999px;
             background: #229ED9;
             color: #fff;
@@ -133,7 +133,8 @@
             text-decoration: none;
             box-shadow: 0 10px 20px rgba(34, 158, 217, 0.25);
             transition: transform 0.2s ease, box-shadow 0.2s ease;
-            gap: 10px;
+            gap: 8px;
+            font-size: 0.95rem;
         }
         .telegram-button:hover {
             transform: translateY(-2px);
@@ -150,24 +151,27 @@
             }
             .contact-card {
                 flex-direction: column;
-                align-items: flex-start;
-                text-align: left;
+                align-items: center;
+                text-align: center;
                 padding: 26px;
-                gap: 20px;
+                gap: 18px;
             }
             .contact-card img {
                 width: 100px;
                 height: 100px;
-                margin-bottom: 4px;
+                margin-bottom: 0;
             }
             .contact-card-content {
                 width: 100%;
-                gap: 14px;
+                gap: 12px;
+                align-items: center;
             }
             .telegram-button {
                 width: auto;
-                padding: 10px 18px;
-                align-self: flex-start;
+                padding: 9px 16px;
+                font-size: 0.9rem;
+                gap: 6px;
+                align-self: center;
             }
         }
         hr {
