--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             }
             .contact-card {
                 flex-direction: column;
-                align-items: center;
-                text-align: center;
+                align-items: flex-start;
+                text-align: left;
                 padding: 26px;
                 gap: 18px;
             }
@@ -164,14 +164,14 @@
             .contact-card-content {
                 width: 100%;
                 gap: 12px;
-                align-items: center;
+                align-items: flex-start;
             }
             .telegram-button {
                 width: auto;
-                padding: 9px 16px;
-                font-size: 0.9rem;
-                gap: 6px;
-                align-self: center;
+                padding: 10px 18px;
+                font-size: 0.95rem;
+                gap: 8px;
+                align-self: flex-start;
             }
         }
         hr {
