Normalize CTA typography on mobile

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   src="https://datafa.st/js/script.js">
 </script>
 <style>
+        html {
+            -webkit-text-size-adjust: 100%;
+        }
         body {
             margin: 0;
             padding: 40px 20px;
@@ -134,7 +137,7 @@
             box-shadow: 0 10px 20px rgba(34, 158, 217, 0.25);
             transition: transform 0.2s ease, box-shadow 0.2s ease;
             gap: 8px;
-            font-size: 0.95rem;
+            font-size: 1rem;
         }
         .telegram-button:hover {
             transform: translateY(-2px);
